--- a/MeetGroups/app/src/main/res/layout/fragment_home.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_button"
+            android:foreground="@color/translucid_grey"
             android:scaleType="fitXY"
             android:src="@drawable/vector_sunset_landscape_illustration"
             app:layout_constraintBottom_toTopOf="@id/text_home"
