--- a/MeetGroups/app/src/main/res/values/themes.xml
+++ b/MeetGroups/app/src/main/res/values/themes.xml
@@ -21,5 +21,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:shadowColor">@color/black</item>
         <item name="android:shadowRadius">3</item>
+        <item name="android:background">@drawable/custom_button</item>
+        <item name="android:paddingHorizontal">10dp</item>
     </style>
 </resources>
