--- a/MeetGroups/app/src/main/res/layout/activity_edit_journal.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_edit_journal.xml
@@ -46,10 +46,13 @@
                 android:layout_height="wrap_content"
                 android:hint="Title"
                 android:layout_weight="4"/>
+
             <ImageButton
                 android:id="@+id/btn_edit_journal_confirm_title_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/custom_button"
                 android:backgroundTintMode="add"
                 android:src="@drawable/ic_done_24" />
 
