--- a/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,12 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.pdm.meetgroups.view.navbar.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_discovery"
+        android:name="com.pdm.meetgroups.view.navbar.discovery.DiscoveryFragment"
+        android:label="@string/title_discovery"
+        tools:layout="@layout/fragment_discovery" />
 
-    <fragment
+    <fragmentw
         android:id="@+id/navigation_profile"
         android:name="com.pdm.meetgroups.view.navbar.profile.ProfileFragment"
         android:label="@string/title_profile"
