--- a/MeetGroups/app/src/main/res/layout/fragment_discovery.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_discovery.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_alignParentRight="false"
     android:padding="20dp"
     tools:context=".view.navbar.discovery.DiscoveryFragment">
 
@@ -11,6 +12,8 @@
         android:id="@+id/discoverySearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_border"
+        android:iconifiedByDefault="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
