--- a/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_dashboard">
+    app:startDestination="@+id/navigation_discovery">
 
     <fragment
         android:id="@+id/navigation_discovery"
@@ -11,7 +11,7 @@
         android:label="@string/title_discovery"
         tools:layout="@layout/fragment_discovery" />
 
-    <fragmentw
+    <fragment
         android:id="@+id/navigation_profile"
         android:name="com.pdm.meetgroups.view.navbar.profile.ProfileFragment"
         android:label="@string/title_profile"
