--- a/MeetGroups/app/src/main/res/layout/row_journal_links.xml
+++ b/MeetGroups/app/src/main/res/layout/row_journal_links.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,16 +10,13 @@
         android:id="@+id/roundImageView"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="5dp"
-        android:layout_weight="0.26"
+        android:layout_weight="0.2"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="250dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             app:cardCornerRadius="250dp">
 
             <ImageView
@@ -26,7 +24,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
-                android:scaleType="centerCrop"
                 app:srcCompat="@android:drawable/ic_notification_overlay" />
 
         </androidx.cardview.widget.CardView>
@@ -37,7 +34,6 @@
         android:id="@+id/textViewLink"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_gravity="center"
         android:layout_weight="0.8"
         android:gravity="center|start"
         android:paddingLeft="10dp"
