--- a/MeetGroups/app/src/main/res/layout/row_journal_links.xml
+++ b/MeetGroups/app/src/main/res/layout/row_journal_links.xml
@@ -1,46 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="20dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+app:cardCornerRadius="5sp"
+app:cardElevation="5dp"
+app:cardUseCompatPadding="true"
+android:layout_marginHorizontal="5sp"
+android:clickable="true"
+android:foreground="?android:attr/selectableItemBackground">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/roundImageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="250dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignTop="@id/roundImageView"
+            android:layout_alignBottom="@id/roundImageView"
+            android:layout_toEndOf="@+id/roundImageView"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textViewLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="TextView"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/roundImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="250dp">
 
-            <ImageView
-                android:id="@+id/LinkImageView"
+            <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:adjustViewBounds="false"
-                android:scaleType="centerCrop"
-                app:srcCompat="@android:drawable/ic_notification_overlay" />
+                android:layout_gravity="center"
+                app:cardCornerRadius="250dp">
+
+                <ImageView
+                    android:id="@+id/LinkImageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:adjustViewBounds="false"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@android:drawable/ic_notification_overlay" />
+
+            </androidx.cardview.widget.CardView>
 
         </androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/textViewLink"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_weight="0.8"
-        android:gravity="center|start"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="TextView"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-</LinearLayout>
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
