--- a/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
@@ -25,7 +25,7 @@
             app:cardCornerRadius="250dp">
 
             <ImageView
-                android:id="@+id/LinkImageView"
+                android:id="@+id/EditProfileImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
