--- a/MeetGroups/app/src/main/res/layout/fragment_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,24 @@
     android:padding="20dp"
     tools:context=".view.navbar.profile.ProfileFragment">
 
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/frameLayoutJournals"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bioTextView">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/journalView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/roundImageView"
         android:layout_width="155dp"
@@ -25,7 +43,7 @@
             app:cardCornerRadius="250dp">
 
             <ImageView
-                android:id="@+id/LinkImageView"
+                android:id="@+id/ProfileImageView"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
@@ -34,16 +52,6 @@
         </androidx.cardview.widget.CardView>
 
     </androidx.cardview.widget.CardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/journalView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_border"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bioTextView" />
 
     <TextView
         android:id="@+id/bioTextView"
@@ -55,7 +63,7 @@
         android:text="@string/no_bio_available"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/journalView"
+        app:layout_constraintBottom_toTopOf="@id/frameLayoutJournals"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
