--- a/MeetGroups/app/src/main/res/layout/fragment_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     android:padding="20dp"
     tools:context=".view.navbar.profile.ProfileFragment">
 
-    <androidx.drawerlayout.widget.DrawerLayout
+    <FrameLayout
         android:id="@+id/frameLayoutJournals"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -19,11 +19,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/journalView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical">
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+    </FrameLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/roundImageView"
