--- a/MeetGroups/app/src/main/res/layout/fragment_journal.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_journal.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/journal_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
     tools:context=".view.navbar.journal.JournalFragment">
     <Toolbar
         android:id="@+id/toolbar_journal"
@@ -15,27 +15,53 @@
             android:id="@+id/rl_journal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/roundImageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="250dp"
+                android:layout_marginTop="30dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:cardCornerRadius="40dp">
+                    <ImageView
+                        android:id="@+id/imv_journal_image"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@android:drawable/sym_def_app_icon" />
+                </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/tv_journal_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="JournalTitle"
                 android:textSize="30sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:maxLength="20"
+                android:layout_toRightOf="@+id/roundImageView"
+                android:layout_centerInParent="true"
+                android:paddingHorizontal="10dp"/>
 
             <ImageButton
                 android:id="@+id/btn_journal_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/btn_journal_edit"
+                android:layout_centerInParent="true"
                 android:backgroundTintMode="add"
                 android:src="@drawable/ic_journal_group_24" />
-
             <ImageButton
                 android:id="@+id/btn_journal_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
                 android:backgroundTintMode="add"
                 android:src="@drawable/ic_journal_edit_24" />
         </RelativeLayout>
@@ -51,7 +77,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        android:padding="15dp">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_journal_postlist"
             android:layout_width="match_parent"
