--- a/MeetGroups/app/src/main/res/layout/row_journal_links.xml
+++ b/MeetGroups/app/src/main/res/layout/row_journal_links.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/idacaso"
+    android:id="@+id/Container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="5sp"
     android:clickable="true"
     app:cardCornerRadius="5sp"
     app:cardElevation="5dp"
@@ -12,7 +11,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingVertical="5dp"
+        android:paddingStart="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,18 +26,22 @@
             <TextView
                 android:id="@+id/textViewLink"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="TextView"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/roundImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginVertical="5dp"
+            android:clipToPadding="true"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="250dp">
 
