Modificata navigazione da EditJournal a NotInJournal.

--- a/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
+++ b/MeetGroups/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,10 @@
         android:name="com.pdm.meetgroups.view.navbar.MapsFragment"
         android:label="@string/title_maps"
         tools:layout="@layout/fragment_maps" />
+
+    <fragment
+        android:id="@+id/navigation_not_in_journal"
+        android:name="com.pdm.meetgroups.view.navbar.journal.JournalFragment"
+        android:label="NotInJournal"
+        tools:layout="@layout/fragment_not_in_journal" />
 </navigation>
