--- a/MeetGroups/app/src/main/res/layout/activity_edit_journal.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_edit_journal.xml
@@ -75,10 +75,10 @@
 
         <Button
             android:id="@+id/btn_edit_journal_add_participant"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Add Participant"/>
+            android:text="Add Participant" />
 
         <Button
             android:id="@+id/btn_edit_journal_close"
