sistemato viewmodeladapter, discovery activity

--- a/MeetGroups/app/src/main/res/layout/fragment_discovery.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_discovery.xml
@@ -21,11 +21,13 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/searchRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/discoverySearch" />
+        app:layout_constraintTop_toBottomOf="@id/discoverySearch"
+        app:layout_constraintVertical_bias="0.03" />
 </androidx.constraintlayout.widget.ConstraintLayout>
