--- a/MeetGroups/app/src/main/res/layout/fragment_journal.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_journal.xml
@@ -36,17 +36,19 @@
                         app:srcCompat="@android:drawable/sym_def_app_icon" />
                 </androidx.cardview.widget.CardView>
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/tv_journal_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="JournalTitle"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:maxLength="20"
-                android:layout_toRightOf="@+id/roundImageView"
                 android:layout_centerInParent="true"
-                android:paddingHorizontal="10dp"/>
+                android:layout_toLeftOf="@id/btn_journal_group"
+                android:layout_toRightOf="@+id/roundImageView"
+                android:maxLength="20"
+                android:paddingHorizontal="10dp"
+                android:text="JournalTitle"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:id="@+id/btn_journal_group"
