--- a/MeetGroups/app/src/main/res/layout/activity_post.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_post.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_post_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/btn_post_delete"
             android:text="PostTitle"
             android:textSize="30sp"
             android:textStyle="bold"
