--- a/MeetGroups/app/src/main/res/layout/row_add_participant.xml
+++ b/MeetGroups/app/src/main/res/layout/row_add_participant.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tv_add_participant_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ParticipantName"
+            android:text="@string/participantname"
             android:layout_gravity="center"
             android:paddingLeft="20dp"
             android:layout_alignParentStart="true"
