--- a/MeetGroups/app/src/main/res/layout/row_participant.xml
+++ b/MeetGroups/app/src/main/res/layout/row_participant.xml
@@ -12,19 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imv_participant_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/sym_def_app_icon"/>
+
         <TextView
             android:id="@+id/tv_participant_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ParticipantName"
+            android:text="@string/participantname"
             android:layout_gravity="center"
             android:paddingLeft="20dp"
-            android:layout_toRightOf="@id/imv_participant_photo"
+            android:layout_alignParentStart="true"
             android:layout_centerInParent="true"
             android:textSize="15sp"/>
         <Button
