--- a/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_edit_profile.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:text="Modifica Immagine"
+                android:text="@string/change_image"
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -50,7 +50,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Edit password"
+        android:hint="@string/edit_password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@id/editTextBio"
         app:layout_constraintEnd_toStartOf="@id/buttonEditPassword"
