--- a/MeetGroups/app/src/main/res/layout/activity_post.xml
+++ b/MeetGroups/app/src/main/res/layout/activity_post.xml
@@ -40,7 +40,7 @@
         android:id="@+id/tv_post_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="No description"/>
+        android:hint="@string/no_description"/>
 
     <Space
         android:layout_width="match_parent"
