--- a/MeetGroups/app/src/main/res/layout/row_journal_links.xml
+++ b/MeetGroups/app/src/main/res/layout/row_journal_links.xml
@@ -30,7 +30,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="TextView"
+                android:text="@string/textview"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
