--- a/MeetGroups/app/src/main/res/layout/row_participant.xml
+++ b/MeetGroups/app/src/main/res/layout/row_participant.xml
@@ -31,7 +31,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
             android:background="@null"
-            android:text="-"
+            android:text="@string/Minus"
             android:textColor="#000"
             android:backgroundTint="#FFFFFF"
             android:textSize="30sp"
