--- a/MeetGroups/app/src/main/res/layout/row_post.xml
+++ b/MeetGroups/app/src/main/res/layout/row_post.xml
@@ -39,7 +39,7 @@
                 android:shadowDx="2"
                 android:shadowDy="2"
                 android:shadowRadius="7"
-                android:text="PostTitle"
+                android:text="@string/posttitle"
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 android:textStyle="bold" />
