--- a/MeetGroups/app/src/main/res/layout/row_tag.xml
+++ b/MeetGroups/app/src/main/res/layout/row_tag.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_tag_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tag"
+        android:text="@string/tag"
         android:textSize="15sp"
         android:padding="5dp"/>
 </androidx.cardview.widget.CardView>
