--- a/MeetGroups/app/src/main/res/layout/fragment_journal.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_journal.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/journal_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.navbar.journal.JournalFragment">
+
     <Toolbar
         android:id="@+id/toolbar_journal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
             android:id="@+id/rl_journal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/roundImageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="250dp"
-                android:layout_marginTop="30dp"
                 android:layout_alignParentStart="true"
-                android:layout_centerInParent="true">
+                android:layout_centerInParent="true"
+                android:layout_marginTop="30dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="250dp">
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     app:cardCornerRadius="40dp">
+
                     <ImageView
                         android:id="@+id/imv_journal_image"
                         android:layout_width="40dp"
@@ -54,10 +59,11 @@
                 android:id="@+id/btn_journal_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/btn_journal_edit"
                 android:layout_centerInParent="true"
+                android:layout_toLeftOf="@id/btn_journal_edit"
                 android:backgroundTintMode="add"
                 android:src="@drawable/ic_journal_group_24" />
+
             <ImageButton
                 android:id="@+id/btn_journal_edit"
                 android:layout_width="wrap_content"
@@ -80,8 +86,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
-        android:paddingTop="20dp"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:paddingTop="20dp">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_journal_postlist"
             android:layout_width="match_parent"
@@ -97,4 +104,15 @@
             android:clickable="true"
             android:src="@drawable/outline_add_24" />
     </FrameLayout>
-</LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="end" >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/partecipantRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
